welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:3: error: type mismatch;
 found   : Int
 required: Boolean
	if (Math.abs(10-a))<(Math.abs(10-b))
                    ^close10:3: error: not found: value <
	if (Math.abs(10-a))<(Math.abs(10-b))
                           ^close10:7: error: type mismatch;
 found   : Int
 required: Boolean
	if (Math.abs(10-a))>(Math.abs(10-b))
                    ^close10:7: error: not found: value >
	if (Math.abs(10-a))>(Math.abs(10-b))
                           ^